# OpenDubbing

./: .gitignore  PROJECT.md  README.md  pyproject.toml  pyrightconfig.json  whisper_sig.txt
docs/: IMPLEMENTATION.md  api.md  architecture.md
examples/: core_test_config.yaml  musetalk_smoke_config.yaml  real_run_config.yaml  sample_config.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: tasks.ts
frontend/src/router/: index.ts
frontend/src/stores/: taskStore.ts
frontend/src/views/: TaskView.vue
frontend/workspace/cache/: asr.meta.json  input.meta.json  state.json  timeline.jsonl  timeline.meta.json  tts.meta.json
frontend/workspace/timeline/: asr.jsonl  tts.jsonl
scripts/: cosyvoice2_infer.py  setup_musetalk.ps1
src/opendubbing/: __init__.py  application.py  cli.py  config.py
src/opendubbing/api/: dependencies.py  routes.py  schemas.py  server.py  websocket.py
src/opendubbing/core/: interfaces.py  registry.py  timeline.py  workspace.py
src/opendubbing/engines/: asr_engine.py  audio_post_processor.py  base.py  face_animation_engine.py  input_engine.py  length_optimizer.py  output_engine.py  prosody_engine.py  timeline_engine.py  translation_engine.py  tts_engine.py  video_post_processor.py
tests/: test_api.py  test_media.py  test_pipeline.py  test_registry.py  test_timeline.py  test_workspace.py
tests/test_engines/: test_engines.py
tests/test_providers/: conftest.py  test_claude.py  test_cosyvoice2.py  test_deep_filter_net3.py  test_demucs.py  test_edge_tts.py  test_gemini.py  test_gpt.py  test_hallo3.py  test_mock_asr.py  test_mock_face.py  test_mock_forced_aligner.py  test_mock_translation.py  test_mock_tts.py  test_musetalk.py  test_nllb.py  test_qwen3_asr.py  test_qwen3_forced_aligner.py  test_silero_vad.py  test_whisper_asr.py
workspace/cache/: audio_post.meta.json  face.jsonl  face.meta.json  input.jsonl  length_optimizer.jsonl  length_optimizer.meta.json  output.meta.json  prosody.jsonl  prosody.meta.json  state.json  timeline.meta.json  translation.meta.json  tts.jsonl  tts.meta.json  video_post.meta.json
workspace/output/: timeline.jsonl
workspace/timeline/: audio_post.jsonl  tts.jsonl  video_post.jsonl
workspace/translation/: translation.jsonl
workspace_core_test/cache/: asr.jsonl  asr.meta.json  audio_post.jsonl  audio_post.meta.json  length_optimizer.meta.json  output.jsonl  output.meta.json  prosody.meta.json  state.json  timeline.jsonl  timeline.meta.json  translation.jsonl  translation.meta.json  tts.meta.json  video_post.meta.json
workspace_core_test/timeline/: length_optimized.jsonl  prosody.jsonl  tts.jsonl  video_post.jsonl
(+54 files in other folders)
