[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendubbing"
version = "0.1.0"
description = "OpenDubbing: AI video dubbing platform with modular pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OpenDubbing Team" },
]
keywords = ["dubbing", "ai", "tts", "translation", "video", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    # --- media (always required) ---
    "ffmpeg-python>=0.2.0",
    "numpy>=1.26",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    # --- LLM clients (translation providers) ---
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyright>=1.1",
]
heavy = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "transformers>=4.40.0",
    "torchvision>=0.17.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "demucs>=0.0.3",
    "deepfilternet>=0.5.0",
    "silero-vad>=5.1",
    "funasr>=1.0.27",
]
all = [
    "opendubbing[api,dev,heavy]",
]

[project.scripts]
opendubbing = "opendubbing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opendubbing"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
strict = ["src/opendubbing"]
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
